View-1 and View-2 Modified

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -9,6 +9,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html"> 
+<link rel="import" href="../bower_components/icons/index.html">
+<link rel="import" href="../bower_components/core-icon/core-icon.html">
+
 
 <link rel="import" href="shared-styles.html">
 <dom-module id="my-view1">
@@ -68,7 +71,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </form>
       <form class="employee-card">
         <div class="form-header2">
-          <h5 class="title">  <iron-icon icon="mail" slot="prefix"></iron-icon>Phillipy Fry</h5>
+          <h5 class="title"><img src="../images/manifest/remove_circle.png" icon="polymer"> Phillipy Fry</h5>
         </div>
         <div class="form-body">
           <table border="0px">
