Final Commit for this project

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -7,12 +7,9 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-
-<link rel="import" href="../bower_components/polymer/polymer-element.html"> 
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/icons/index.html">
 <link rel="import" href="../bower_components/core-icon/core-icon.html">
-
-
 <link rel="import" href="shared-styles.html">
 <dom-module id="my-view1">
   <template>
@@ -27,15 +24,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="row">
       <form class="employee-card">
         <div class="form-header">
-         <h5 class="title">John Jackson
-         </h5>
+          <h5 class="title">John Jackson
+          </h5>
         </div>
         <div class="form-body">
           <table border="0px">
             <tr>
               <td> Title</td>
               <td class="secondColumn">Software Engineer</td>
-            </tr> 
+            </tr>
             <tr>
               <td> Status</td>
               <td class="secondColumn">Active</td>
@@ -60,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
             <tr>
               <td> Status</td>
-              <td  class="secondColumn">Active</td>
+              <td class="secondColumn">Active</td>
             </tr>
             <tr>
               <td> Location</td>
@@ -71,7 +68,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </form>
       <form class="employee-card">
         <div class="form-header2">
-          <h5 class="title"><img src="../images/manifest/remove_circle.png" icon="polymer"> Phillipy Fry</h5>
+          <h5 class="title">
+            <img src="../images/manifest/remove_circle.png" icon="polymer"> Phillipy Fry</h5>
         </div>
         <div class="form-body">
           <table border="0px">
@@ -85,7 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
             <tr>
               <td> Location</td>
-              <td class="secondColumn" >Grand Rapids</td>
+              <td class="secondColumn">Grand Rapids</td>
             </tr>
           </table>
         </div>
@@ -93,27 +91,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </div>
     </div>
-
-    <!-- Event handling  -->
-
-    <div>
-        <button on-tap="handleTap">Kick Me</button>
-    </div>
-
   </template>
 
   <script>
     class MyView1 extends Polymer.Element {
       static get is() { return 'my-view1'; }
     }
-  
-    Polymer({
-        is: 'my-view1',
-        handleTap: function() {
-          alert('Ow!');
-        }
-      });
-  
     window.customElements.define(MyView1.is, MyView1);
   </script>
 </dom-module>
